--- a/phpcms/templates/default/content/header.html
+++ b/phpcms/templates/default/content/header.html
@@ -6,86 +6,49 @@
 <title>{if isset($SEO['title']) && !empty($SEO['title'])}{$SEO['title']}{/if}{$SEO['site_title']}</title>
 <meta name="keywords" content="{$SEO['keyword']}">
 <meta name="description" content="{$SEO['description']}">
-<link href="{CSS_PATH}reset.css" rel="stylesheet" type="text/css" />
-<link href="{CSS_PATH}default_blue.css" rel="stylesheet" type="text/css" />
+<link href="{CSS_PATH}slks/style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="{JS_PATH}jquery.min.js"></script>
 <script type="text/javascript" src="{JS_PATH}jquery.sgallery.js"></script>
 <script type="text/javascript" src="{JS_PATH}search_common.js"></script>
 </head>
 <body>
-<div class="body-top">
-    <div class="content">
-    {pc:content  action="position" posid="9" order="id" num="10" cache="3600"}
-    		<div id="announ">
-                 <ul>
-                 {loop $data $k $v}
-                      <li><a href="{$v[url]}">{$v[title]}</a></li>
-                      {/loop}
-                 </ul>
-            </div>
-     {/pc}
-	 {php echo runhook('glogal_header')}
-<script type="text/javascript">
-$(function(){
-	startmarquee('announ',22,1,500,3000);
-})
-</script>
-            <div class="login lh24 blue"><a href="{APP_PATH}index.php?m=content&c=rss&siteid={get_siteid()}" class="rss ib">rss</a><span class="rt"><script type="text/javascript">document.write('<iframe src="{APP_PATH}index.php?m=member&c=index&a=mini&forward='+encodeURIComponent(location.href)+'&siteid={get_siteid()}" allowTransparency="true"  width="500" height="24" frameborder="0" scrolling="no"></iframe>')</script></span></div>
-    </div>
-</div>
-<div class="header">
-	<div class="logo"><a href="{siteurl($siteid)}/"><img src="{IMG_PATH}v9/logo.jpg" /></a></div>
-
-    <div class="search">
-    	<div class="tab" id="search">
-			{php $j=0}
-			{php $search_model = getcache('search_model_'.$siteid, 'search');}
-			{loop $search_model $k=>$v}
-			{php $j++;}
-				<a href="javascript:;" onclick="setmodel({$v['typeid']}, $(this));" style="outline:medium none;" hidefocus="true" {if $j==1 && $typeid=$v['typeid']} class="on" {/if}>{$v['name']}</a>{if $j != count($search_model)}<span> | </span>{/if}
-			{/loop}
-			{php unset($j);}
+<DIV id=top><!--顶部开始-->
+	<DIV class=header>
+		<DIV class=header_box>
+			<DIV class=logo>
+				<IMG src="{IMG_PATH}/slks/logo.jpg"  width=578 height=84></DIV>
+			<DIV class=hot>
+				<DIV class=hot_n1>
+					<DIV class=hot_n2>
+						<UL>
+							<LI>
+								<A onclick="this.style.behavior='url(#default#homepage)';this.setHomePage(location.href);"	href="##" rel=nofollow>设为首页</A>                                </LI>
+							<LI>
+								<A	onclick=javascript:window.external.AddFavorite(location.href,document.title)	href="javascript:void(0)" rel=nofollow>加入</A>                             </LI>
+						</UL>
+					</DIV>
+					<DIV class=hot_n3>
+						<IMG src="{IMG_PATH}/slks/top_icon.jpg"   width=16 height=16>
+						<A href="http://e.weibo.com/u/2820223733">企业微博</A>
+					</DIV>
+				</DIV>
+				<DIV class=xg_hot_tel>
+					<IMG	src="{IMG_PATH}/slks/xg_tel.jpg" width=234	height=39>
+				</DIV>
+			</DIV>
+		</DIV>
+	</DIV>
+	<div class=nav>
+		<div class=nav_box>
+			{pc:content action="category" catid="0" num="25" siteid="$siteid" order="listorder ASC"}
+			<ul>
+				<li class=li1><a href="?">首页</a> </li>
+				{loop $data $r}
+				<li class=li1><a href="{$r[description]}">{$r[catname]}</a> </li>
+				{/loop}
+			</ul>
+			{/pc}
 		</div>
-
-        <div class="bd">
-            <form action="{APP_PATH}index.php" method="get" target="_blank">
-				<input type="hidden" name="m" value="search"/>
-				<input type="hidden" name="c" value="index"/>
-				<input type="hidden" name="a" value="init"/>
-				<input type="hidden" name="typeid" value="{$typeid}" id="typeid"/>
-				<input type="hidden" name="siteid" value="{$siteid}" id="siteid"/>
-                <input type="text" class="text" name="q" id="q"/><input type="submit" value="搜 索" class="button" />
-            </form>
-        </div>
-    </div>
-
-    <div class="banner"><script language="javascript" src="{APP_PATH}index.php?m=poster&c=index&a=show_poster&id=1"></script></div>
-    <div class="bk3"></div>
-    <div class="nav-bar">
-    	<map>
-    	{pc:content action="category" catid="0" num="25" siteid="$siteid" order="listorder ASC"}
-        	<ul class="nav-site">
-			<li><a href="{siteurl($siteid)}"><span>首页</span></a></li>
-			{loop $data $r}
-			<li class="line">|</li>
-			<li><a href="{$r[url]}"><span>{$r[catname]}</span></a></li>
-			{/loop}
-            </ul>
-        {/pc}
-		{php echo runhook('glogal_menu')}
-        </map>
-    </div> 
-	
-	{if $top_parentid}
-    <div class="subnav">
-		{pc:content action="category" catid="$top_parentid" num="15" siteid="$siteid" order="listorder ASC"}
-			{loop $data $r}
-			<a href="{$r[url]}">{$r[catname]}</a><span> | </span>
-			{/loop}
-        {/pc}
-		<a href="{APP_PATH}index.php?m=video&c=index&a=album">视频专辑</a> <span> | </span>
-    	{if $modelid}<a href="{APP_PATH}index.php?m=content&c=search&catid={$catid}">搜索</a>{/if}
-    </div>
-	{/if}
-</div>
-</div>
+	</div>
+</DIV>
+<!--顶部结束-->
